# snake7

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
snake7/: __init__.py  callbacks.py  env.py  eval.py  neat_viz.py  play.py  train.py  train_neat.py  train_transformer.py  transformer.py  watch.py  wrappers.py
tests/: test_cli_by_path.py  test_early_stop.py  test_env_shaping.py  test_env_smoke.py  test_eval_import.py  test_neat_smoke.py  test_neat_viz.py  test_optional_deps.py  test_sb3_smoke.py  test_sb3_transformer_smoke.py  test_train_device.py  test_train_neat_fitness.py  test_train_neat_integration.py  test_train_transformer_device.py  test_watch_by_path.py  test_watch_utils.py
